--- a/index.html
+++ b/index.html
@@ -10,14 +10,16 @@
     <header>5280 Landmarks</header>
 
     <nav>
-      <a href="">Building</a>
-      <a href="">Art</a>
-      <a href="">Feature</a>
+      <a href="" class="navlink">Building</a>
+      <a href="" class="navlink">Art</a>
+      <a href="" class="navlink">Feature</a>
     </nav>
 
     <section>
-      <img src="./images/1.jpg">
+      <img src="./images/1.jpg" width=100%>
+    </section>
 
+    <div>
       <h1>Denver Art Museum</h1></br>
 
       <p>Lorem ipsum dolor sit amet, quis idque munere est ex. Eos id soluta meliore menandri, sed ex graeci prompta sapientem. Cum in verterem partiendo, quod partiendo principes vix et. Ne eam virtute abhorreant. At qui doming nemore mediocritatem, ei pri bonorum blandit, vim elitr recusabo salutatus eu.</p></br>
@@ -27,7 +29,6 @@
       <p>Duo an eleifend omittantur, te sint civibus recusabo eos. An ius corpora definiebas cotidieque. Eu pri reque sapientem contentiones, fierent conclusionemque mei in. Saepe veniam ne mei, ut facilisi omittantur nec.</p></br>
 
       <p>Nam ad quas consul salutandi, sea ad verterem quaestio. Mei ea quot dictas. Eam choro eloquentiam eu, vim cu facete scriptorem. Mel at latine veritus.</p></br>
-    </section>
-
+    </div>
   </body>
 </html>
